aws bae issue solve

--- a/extensions.conf
+++ b/extensions.conf
@@ -21,12 +21,20 @@ include => dialout
 
 [incoming-calls-wildcard]
 
-exten => _20X,1,Dial(SIP/${EXTEN},30,120)
-exten => _20X,n,VoiceMail(${EXTEN})
+exten => *200,1,Answer
+same => n,WaitExten
+same => n,Hangup
+
+exten => _20X,1,Dial(SIP/${EXTEN},10)
+exten => _20X,n,GotoIf($[ "${DIALSTATUS}" = "BUSY" ]?100-busy,1)
+exten => _20X,n,VoiceMail(${EXTEN},u)
 exten => _20X,n,Hangup
 
+exten => 100-busy,1,VoiceMail(${EXTEN:0:3},b)
+same => n,Hangup
+
 exten => *202,1,VoiceMailMain(202)
-same => n,Hangup()
+same => n,Hangup
 
 [incoming-calls-wildcard2]
 exten => _20[236-8],1,Dial(SIP/${EXTEN},,120)
