--- a/sip.conf
+++ b/sip.conf
@@ -3,11 +3,32 @@ context=public                  ; Default context for incoming calls. Defaults t
 allowoverlap=no                 ; Disable overlap dialing support. (Default is yes)
 udpbindaddr=0.0.0.0             ; IP address to bind UDP listen socket to (0.0.0.0 binds to all)
 tcpenable=no                 ; Enable server for incoming TCP connections (default is no)
-tcpbindaddr=0.0.0.0             ; IP address for TCP server to bind to (0.0.0.0 binds to all interfaces)
+tcpbindaddr=0.0.0.0
+localnet=10.0.0.0/255.0.0.0
+localnet=192.168.0.0/255.255.0.0
+externip=18.212.56.148             ; IP address for TCP server to bind to (0.0.0.0 binds to all interfaces)
 transport=udp                   ; Set the default transports.  The order determines the primary default transport.
 srvlookup=yes                   ; Enable DNS SRV lookups on outbound calls
 qualify=yes
 
+
+[203]
+username=203
+secret=123456
+host=dynamic
+nat=yes
+type=friend
+qualify=yes
+context=incoming-calls-wildcard
+
+[204]
+username=204
+secret=123456
+host=dynamic
+nat=yes
+type=friend
+qualify=yes
+context=incoming-calls-wildcard
 
 [202]
 username=202
@@ -39,8 +60,8 @@ context=incoming-calls
 [206]
 username=206
 secret=123456
-host=dynamic 
-nat=yes   
+host=dynamic
+nat=yes
 type=friend
 qualify=yes
 context=incoming-calls
